Fixed the map overflow inside the sunburst

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
     background: #fff;
     border-radius: 4px;
     display: none;
+	z-index: 3;
 }
 
 path {
@@ -77,12 +78,15 @@ pre.prettyprint {
 
 #map {
     position: absolute;
-    width: 400px;
-    height: 400px;
+    width: 333px;
+    height: 333px;
     top:0;
     bottom: 0;
     left: 0;
     right: 0;
+	z-index: 2;
+	border-radius: 100%;
+	overflow:hidden;
 
     margin: auto;
 }
@@ -95,6 +99,7 @@ pre.prettyprint {
     bottom: 0;
     left: 0;
     right: 0;
+	z-index: 1;
 
     margin: auto;
 }
@@ -104,3 +109,4 @@ pre.prettyprint {
     width: 100%;
     height: 700px;
 }
+
